# katalint

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SCRATCHPAD.md  katalint.yml  pyproject.toml
.github/workflows/: katalint.yml  publish.yml
docs/: publishing.md
docs/adr/: 0001-scope.md
docs/examples/: bad-task.md  good-task.md  pre-commit-config.yaml
docs/rules/: KTL001-context-bloat.md  KTL003-blind-references.md  KTL004-init-fossilization.md  KTL004-prohibition-overload.md  KTL101-missing-acceptance-criteria.md  KTL102-missing-verification-command.md  KTL103-missing-handoff-fields.md  KTL104-scope-too-wide.md  index.md
src/katalint/: cli.py  config.py  discovery.py  findings.py  reporter.py
src/katalint/rule_docs/: KTL001-context-bloat.md  KTL002-lint-leakage.md  KTL101-missing-acceptance-criteria.md  __init__.py
src/katalint/rules/: base.py  blind_references.py  context_bloat.py  init_fossilization.py  lint_leakage.py  missing_acceptance.py  missing_handoff.py  missing_verification.py  prohibition_overload.py  scope_too_wide.py
tests/: test_config.py  test_discovery.py  test_discovery_classification.py  test_discovery_edge_cases.py  test_docs_scope.py  test_engine.py  test_examples.py  test_release_readiness.py  test_rule_catalogue_parity.py
tests/fixtures/config/blind_references/bad/: AGENTS.md
tests/fixtures/config/blind_references/good/: AGENTS.md
tests/fixtures/config/context_bloat/bad/: AGENTS.md
tests/fixtures/config/context_bloat/good/: AGENTS.md
tests/fixtures/config/lint_leakage/bad/: AGENTS.md
tests/fixtures/workflow/missing_acceptance/: bad.md  good.md
tests/fixtures/workflow/missing_handoff/: bad.md  good.md
tests/fixtures/workflow/missing_verification/: bad.md  good.md
tests/fixtures/workflow/scope_too_wide/: bad.md  good.md
tests/rules/: test_blind_references.py  test_context_bloat.py  test_init_fossilization.py  test_lint_leakage.py  test_missing_acceptance.py  test_missing_handoff.py  test_missing_verification.py  test_prohibition_overload.py  test_scope_too_wide.py
(+3 files in other folders)
