[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katalint"
dynamic = ["version"]
description = "A fast, deterministic linter for AI coding agent instructions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "katalint contributors"},
]
keywords = [
  "agent-instructions",
  "ai-coding-agents",
  "ci",
  "lint",
  "markdown",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/ginkgocreate/katalint"
Repository = "https://github.com/ginkgocreate/katalint"
Issues = "https://github.com/ginkgocreate/katalint/issues"

[project.scripts]
katalint = "katalint.cli:app"

[tool.setuptools.dynamic]
version = {attr = "katalint.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"katalint.rule_docs" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
